[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Diego Fernández <bigomby@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
criterion = "0.3"
itertools = "0.9.0"
regex = "1.4.2"

[lib]
name = "aoc2020"
path = "src/lib/lib.rs"

[[bin]]
name = "aoc-cli"
path = "src/bin/main.rs"


[[bench]]
name = "puzzle01"
harness = false